--- a/.env
+++ b/.env
@@ -1,14 +1,20 @@
 NODE_ENV=dev
 
-PORT=4000
-
 ### Database - Postgres
-PG_HOST=db_boilerplate
-PG_PORT=5432
+# for container version
+#PORT=4000
+#PG_HOST=db_boilerplate
+#PG_PORT=5432
+
+# for local version
+PORT=4001
+PG_HOST=localhost
+PG_PORT=8432
+
 POSTGRES_USER=walter
 POSTGRES_PASSWORD=white
 POSTGRES_DB=boilerplate
 
 ### JWT
 JWT_SECRET=dfdhhf8gh523reh6qedn37dferpoawdn381j
-JWT_EXPIRATION=15m
+JWT_EXPIRATION=90m
